# FSM-Generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
examples/: CMakeLists.txt
examples/guess-number/: CMakeLists.txt  game.cpp
include/: Event.hpp  FsmGenerator.hpp  States.hpp  Transition.hpp  TransitionTable.hpp
include/FsmGenerator/: Event.hpp  FsmGenerator.hpp
include/internal/: EventBase.hpp  Transition.hpp  TransitionTable.hpp
